--- a/package.json
+++ b/package.json
@@ -16,7 +16,8 @@
     "express": "^4.17.1",
     "morgan": "^1.9.1",
     "mysql2": "^2.1.0",
-    "sequelize": "^5.21.4"
+    "sequelize": "^5.21.4",
+    "sequelize-auto": "^0.4.29"
   },
   "devDependencies": {
     "@babel/cli": "^7.8.4",
